[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-helper-graystorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []
authors = [{ name = "Jeff Culverhouse" }]
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mqtt_helper*"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.14.2",
]
